--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^5.3.2",
     "element-ui": "^2.15.6",
     "moment": "^2.29.1",
     "vue": "^2.5.2",
